[gd_scene load_steps=2 format=3 uid="uid://bdnb_titlescreen"]

[ext_resource type="Script" path="res://scripts/ui/TitleScreen.gd" id="1"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
text = "BROKEN DIVINITY"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="UI"]
layout_mode = 2
text = "New Babylon"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="UI"]
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="UI"]
layout_mode = 2
text = "New Game"

[node name="ExitButton" type="Button" parent="UI"]
layout_mode = 2
text = "Exit"
